--- a/applications/argocd-pihole.yaml
+++ b/applications/argocd-pihole.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: argocd-pihole
+  name: pihole
   namespace: argocd
 spec:
   project: default
